# documentacion-amani

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  index.html  index.md  mkdocs.yml  pyproject.toml  skills-lock.json
.github/workflows/: deploy-docs.yml
agents/: index.html
android/: arquitectura.md
android/arquitectura/: index.html
api/: admin.md  auth.md  index.html  mensajes.md  psicologos.md  sesiones.md  situaciones.md
api/admin/: index.html
api/ajustes/: index.html
api/auth/: index.html
api/citas/: index.html
api/diario-emocional/: index.html
api/direcciones/: index.html
api/historial-clinico/: index.html
api/mensajes/: index.html
api/openapi/: index.html
api/pacientes/: index.html
api/progreso-emocional/: index.html
api/psicologos/: index.html
api/sesiones/: index.html
api/situaciones/: index.html
arquitectura/: base-de-datos.md  diagrama.md  index.html  index.md
arquitectura/base-de-datos/: index.html
arquitectura/diagrama/: index.html
assets/stylesheets/: custom.css
backend-api/: arquitectura.md
backend-api/api-rest/: index.html
backend-api/arquitectura/: index.html
backend-api/notificaciones/: index.html
backend-api/websocket/: index.html
despliegue/: docker-compose.md
despliegue/docker-compose/: index.html
despliegue/variables-entorno/: index.html
docs/: index.md
guias/: docker.md  index.html  instalacion.md  notificaciones.md  websocket.md
javadoc/: index.html  index.md
kdoc/: index.html  index.md
overrides/: main.html
scripts/: gen_nav.py
search/: search_index.json
(+35 files in other folders)
