[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdownify>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.5",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-section-index>=0.3.11",
]
